# tapir

./: .gitignore  .gitmodules
src/: CMakeLists.txt  Makefile
src/include/rss/: lib.h
src/lib/: CMakeLists.txt  Rules.mk  assert.h  configuration.cc  configuration.h  latency.cc  latency.h  repltransport.cc  repltransport.h  simtransport.h  tcptransport.cc  tcptransport.h  transport-proto.proto  transport.h  transportcommon.h  udptransport.cc  udptransport.h
src/lib/tests/: Rules.mk
src/lockserver/: client.cc  client.h  lockserver-repl.cc
src/lockserver/tests/: Rules.mk
src/replication/common/: CMakeLists.txt  client.h  replica-inl.h  replica.cc  replica.h
src/replication/ir/: CMakeLists.txt  client.cc  client.h  replica.h
src/replication/vr/: CMakeLists.txt  Rules.mk  client.cc  client.h  replica.cc
src/rss/: lib.cc
src/store/: CMakeLists.txt  Rules.mk  server.cc
src/store/benchmark/: benchClient.cc  retwisClient.cc  terminalClient.cc
src/store/common/: CMakeLists.txt  Rules.mk  common-proto.proto  partitioner.cc  pinginitiator.h  timestamp.h  transaction.cc  transaction.h  truetime.cc  truetime.h
src/store/strongstore/: CMakeLists.txt  Rules.mk  client.cc  client.h  coordinator.cc  coordinator.h  intershardclient.cc  intershardclient.h  lockstore.cc  lockstore.h  locktable.cc  locktable.h  networkconfig.cc  networkconfig.h  occstore.cc  occstore.h  preparedtransaction.cc  preparedtransaction.h  replicaclient.cc  replicaclient.h  server.cc  server.h  shardclient.cc  shardclient.h  strong-proto.proto  strongbufferclient.cc  strongbufferclient.h  transactionstore.cc  transactionstore.h  viewfinder.cc  viewfinder.h  waitdie.cc  waitdie.h  woundwait.cc  woundwait.h
src/store/tapirstore/: CMakeLists.txt  Rules.mk  client.cc  client.h  server.cc  server.h  shardclient.cc  shardclient.h  (+3 more)
src/timeserver/: timeserver.cc
(+81 files in other folders)
